@@ -16,6 +16,7 @@
 * Authorize.Net CIM: Allow omitting card expiration date [shanebonham]
 * Authorize.Net CIM: Add support for extraOptions to createCustomerProfileTransaction [tpiekos]
 * Add NETPAY gateway [samlown]
+* Balanced gateway: Add amount to the refund method signature [ntalbott]
 
 == Version 1.29.3 (December 7, 2012)
 
